package com.fanstudy.designmode.proxy.staticproxy;

public interface ITeacherDao {
    void teach();
}
